# yarbac

./: Cargo.toml  license.txt
configuration/: base.yaml
src/: configuration.rs  db.rs  lib.rs  main.rs  migrations.sql
src/routes/: db.rs  health_check.rs  mod.rs
src/routes/permissions/: lib.rs  mod.rs
src/services/: mod.rs
src/services/permissions/: mod.rs
