[package]
name = "yarbac"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7"
bb8 = "0.8"
bb8-postgres = "0.8"
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde-aux = "4.5"
config = { version = "0.14", default-features = false, features = ["yaml"] }
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }